src/objects/Skill_DataBase__c/Skill_DataBase__c.object-meta.xml
<CustomObject>
    <label>Skill DataBase</label>
    <nameField>
        <displayFormat>SD-{00000000}</displayFormat>
        <label>Skill DataBase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill DataBase</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>