src/objects/Skill_DataBase__c/fields/Master_Skill_Type__c.field-meta.xml
<CustomField>
    <fullName>Master_Skill_Type__c</fullName>
    <label>Master Skill Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>