src/objects/Skill_DataBase__c/fields/Mobile_App_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_Contact_Number__c</fullName>
    <label>Mobile App Contact Number</label>
    <type>Phone</type>
</CustomField>