src/objects/Skill_DataBase__c/fields/Mobile_App_Products_Description__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_Products_Description__c</fullName>
    <label>Mobile App Products Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>