src/objects/Skill_DataBase__c/fields/Mobile_App_Products_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_Products_Image_Url__c</fullName>
    <label>Mobile App Products Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>