src/objects/Skill_DataBase__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <label>Product Ext</label>
    <length>25</length>
    <type>Text</type>
</CustomField>