src/objects/Skill_DataBase__c/fields/Skill_Type__c.field-meta.xml
<CustomField>
    <fullName>Skill_Type__c</fullName>
    <label>Skill Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>