src/objects/Skill_DataBase__c/fields/Skill_Value__c.field-meta.xml
<CustomField>
    <fullName>Skill_Value__c</fullName>
    <label>Skill Value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>