src/objects/Skill_DataBase__c/fields/Value1__c.field-meta.xml
<CustomField>
    <fullName>Value1__c</fullName>
    <externalId>true</externalId>
    <label>Value1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>