src/objects/Skill_DataBase__c/fields/Value2__c.field-meta.xml
<CustomField>
    <fullName>Value2__c</fullName>
    <externalId>true</externalId>
    <label>Value2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>