src/objects/Skill_DataBase__c/fields/Value3__c.field-meta.xml
<CustomField>
    <fullName>Value3__c</fullName>
    <externalId>true</externalId>
    <label>Value3</label>
    <length>150</length>
    <type>Text</type>
</CustomField>