src/objects/Skill_DataBase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Skill_Type__c</columns>
    <columns>Skill_Value__c</columns>
    <columns>Master_Skill_Type__c</columns>
    <columns>Value1__c</columns>
    <columns>Value2__c</columns>
    <columns>Value3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>