src/objects/Skill_DataBase__c/listViews/Country_list.listView-meta.xml
<ListView>
    <fullName>Country_list</fullName>
    <columns>NAME</columns>
    <columns>Skill_Type__c</columns>
    <columns>Skill_Value__c</columns>
    <columns>Value1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Skill_Type__c</field>
        <operation>contains</operation>
        <value>area</value>
    </filters>
    <label>Country list</label>
    <language>en_US</language>
</ListView>